# jagman

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  drizzle.config.ts  opencode.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml
app/: hooks.server.ts
app/lib/: ActButton.svelte  BrandIcon.svelte  ControlButton.svelte  ErrorSpan.svelte  EventHeader.svelte  FeatherIcon.svelte  IdentSpan.svelte  LogView.svelte  Logo.svelte  Pane.svelte  TextArea.svelte  TextBox.svelte  Unbox.svelte  activity.ts  brands.ts  messages.ts  overflowing.ts  theme.css
app/lib/attention/: IdlePrompt.svelte  LaunchPrompt.svelte  meta.ts
app/lib/server/: active-order.ts  agent.ts  claude.spec.ts  claude.ts  copilot.ts  gg.spec.ts  gg.ts  jsonl.spec.ts  jsonl.ts  last-entries.ts  mock-data.ts  opencode.spec.ts  opencode.ts  paths.ts  processes.ts  state.ts
app/routes/: +layout.svelte
docs/adr/: 0001-remote-functions-for-data-flow.md  0002-iframe-detail-pane.md  0003-surface-errors-to-users.md
docs/plans/: isolated-workspaces.md  opencode-sessions.md
native/: index.js  package.json
npm/darwin-arm64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: AGENTS.md  hooks.server.ts  lib.rs
src/lib/: AgentCard.svelte  AttentionBar.svelte  AttentionCard.svelte  Column.svelte  DetailPane.svelte  LeftSidebar.svelte  Logo.svelte  Pane.svelte  RepoColumn.svelte  messages.ts  theme.css  types.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  data.remote.ts  page.svelte.spec.ts
(+58 files in other folders)
