[package]
name = "libgg"
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
napi = { version = "3", default-features = false, features = [
    "anyhow",
    "napi6",
    "serde-json",
    "tokio_rt",
] }
napi-derive = "3"
# gg-cli = "0.38.4" 
gg-cli = { path = "../gg" }
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
] }
axum = "0.8"
log = "0.4"
serde_json = "1"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

[build-dependencies]
napi-build = "2"

[profile.dev]
debug = 0
